--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   path_provider: ^2.1.2
   video_thumbnail: ^0.5.3
   flutter_image_compress: ^2.1.0
+  file_selector: ^1.1.0
+  file_saver: ^0.3.1
+  macos_file_picker: ^0.7.2
 
 dev_dependencies:
   flutter_test:
