--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   file_selector: ^1.1.0
   file_saver: ^0.3.1
   macos_file_picker: ^0.7.2
+  image: ^4.7.2
 
 dev_dependencies:
   flutter_test:
