--- a/android/.gitignore
+++ b/android/.gitignore
@@ -12,3 +12,6 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+# Google Services (contains sensitive information)
+google-services.json
