--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   file_saver: ^0.3.1
   macos_file_picker: ^0.7.2
   image: ^4.7.2
+  firebase_core: ^3.6.0
+  firebase_analytics: ^11.3.3
+  firebase_crashlytics: ^4.1.3
 
 dev_dependencies:
   flutter_test:
