--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_analytics: ^11.3.3
   firebase_crashlytics: ^4.1.3
+  shared_preferences: ^2.2.2
+  share_plus: ^10.1.2
+  cross_file: ^0.3.4
 
 dev_dependencies:
   flutter_test:
