--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   shared_preferences: ^2.2.2
   share_plus: ^10.1.2
   cross_file: ^0.3.4
+  google_mobile_ads: ^5.1.0
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
