--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,12 @@ dependencies:
   firebase_analytics: ^11.3.3
   firebase_crashlytics: ^4.1.3
   shared_preferences: ^2.2.2
-  share_plus: ^10.1.2
+  share_plus: ^7.2.2
   cross_file: ^0.3.4
   google_mobile_ads: ^5.1.0
   http: ^1.2.0
+  share_lib:
+    path: ../../flutter_share_lib
 
 dev_dependencies:
   flutter_test:
