--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ dependencies:
   file_saver: ^0.3.1
   macos_file_picker: ^0.7.2
   image: ^4.7.2
-  firebase_core: ^3.6.0
-  firebase_analytics: ^11.3.3
-  firebase_crashlytics: ^4.1.3
+  firebase_core: ^4.3.0
+  firebase_analytics: ^12.1.1
+  firebase_crashlytics: ^5.0.7
   shared_preferences: ^2.2.2
   share_plus: ^7.2.2
   cross_file: ^0.3.4
@@ -40,7 +40,7 @@ dev_dependencies:
   flutter_native_splash: ^2.4.1
 
 flutter_launcher_icons:
-  android: false
+  android: true
   ios: true
   image_path: "assets/icon/icon.png"
 
